assets/main.css
/* ... */
.file-text:hover {
    background-color: rgba(255, 255, 255, 0.05);
    cursor: pointer;
}

.file-text.selected {
    color: rgb(255, 81, 81);
}


.right-click-menu {
    position: absolute;
    background-color: #1e1e1e;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    z-index: 1000;
}

.dialog-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background: rgba(0, 0, 0, 0.5); 
    z-index: 1000; 
    display: flex;
    justify-content: center;
    align-items: center;
    pointer-events: auto; 
}

.dialog {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: white;
    color: black;
    padding: 20px;
    border-radius: 8px;
    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
    z-index: 10;
}

.dialog-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
}


.left-panel-slider, .terminal-slider {
    right: 0;
    background: #2e2e2e;
    transition: 0.3s ease-in-out 0s, opacity 0.3s ease-in-out 0s;
}

.terminal-slider {
    height: 5px;
    cursor: ns-resize; /* Horizontal resize cursor */
}

.left-panel-slider {
    width: 5px;
    cursor: ew-resize; /* Column resize cursor */
}

.left-panel-slider:hover, .terminal-slider:hover {
    background: #00ffea;
    transition: 0.3s ease-in-out 0s, opacity 0.3s ease-in-out .3s;
}


/* Side panel icon styles */
.side-panel-icon {
    position: relative; /* Ensure the pseudo-element is positioned relative to the button */
    border: none;
    background-color: transparent;
    cursor: pointer;
    width: 50px;
    height: 50px;
    transition: background-color 0.3s ease, color 0.3s ease;
}

.side-panel-icon::before {
    content: "";
    position: absolute;
    left: 0;
    top: 0;
    bottom: 0;
    width: 4px; /* Width of the colored margin */
    background-color: transparent; /* Initial background color */
    transition: background-color 0.3s ease; /* Smooth transition for background color */
}

.side-panel-icon:hover {
    background-color: var(--side-panel-icon-hover-background); /* Subtle background color on hover */
}

.side-panel-icon:hover::before {
    background-color: var(--side-panel-icon-hover-margin-color); /* Change the margin color to match the background color */
}

.side-panel-icon.selected {
    background-color: var(--side-panel-icon-selected-background); /* Background color when selected */
}

.side-panel-icon.selected::before {
    background-color: var(--side-panel-icon-selected-margin-color); /* Margin color when selected */
}

.save-button {
    width: 60px;
    color: lightyellow;
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: 'JetBrains Mono', monospace;
    height: 100%;
    font-size: 15px;
    border: none;
    cursor: pointer;
    transition: background-color 0.3s ease; /* Smooth transition for background color */
}

.save-button:hover {
    background-color: rgb(92, 63, 63); /* Darken background color on hover */
}

.save-button:active {
    background-color: rgb(44, 44, 44); /* Darken background color on click */
}

/* Tab styles */
.tab {
    display: inline-flex;
    align-items: center;
    padding: 8px 12px;
    min-width: 100px;
    max-width: 175px;
    justify-content: space-between;
    background-color: transparent;
    color: rgba(255, 255, 255, 0.829);
    font-family: 'JetBrains Mono', monospace;
    font-size: 12px;
    cursor: pointer;
    transition: background-color 0.3s ease, color 0.3s ease;
    height: 100%; 
    position: relative; 
    border-radius: 0; 
}

.tab::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    height: 4px; /* Height of the colored margin */
    background-color: transparent; /* Initial background color */
    transition: background-color 0.3s ease; /* Smooth transition for background color */
}

.tab:hover {
    background-color: rgba(255, 255, 255, 0.1); /* Slightly lighter background on hover */
}

.tab:hover::before {
    background-color: var(--side-panel-icon-selected-margin-color); /* Highlighted margin color on hover */
}

.tab.highlighted::before {
    background-color: var(--side-panel-icon-hover-margin-color); /* Highlighted margin color */
}

.tab.highlighted {
    background-color: var(--side-panel-icon-hover-background); /* Highlighted background color */
}

.tab.non-exists {
    text-decoration: line-through; /* Cross out text */
    color: rgba(255, 0, 0, 0.7); /* Red color for deleted files */
}

.custom-checkbox {
    appearance: none;
    width: 20px;
    height: 20px;
    background-color: #1e1e1e;
    border: none;
    outline: none;
    cursor: pointer;
    position: relative;
}

.custom-checkbox:checked::before {
    content: "✔";
    color: white;
    font-size: 16px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.custom-button {
    padding: 10px;
    font-family: 'JetBrains Mono', monospace;
    font-size: 15px;
    flex: 1;
    background-color: #1e1e1e;
    color: white;
    border: none;
    outline: none;
    cursor: pointer;
    transition: background-color 0.3s ease;
}

.custom-button:hover {
    background-color: #2e2e2e; /* Slightly lighter background on hover */
}

.custom-button:active {
    background-color: #3e3e3e; /* Even lighter background on click */
}

.history-item {
    display: flex;
    justify-content: center;
    padding: 10px;
    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
    cursor: pointer;
    width: 100%;

    transition: background-color 0.3s ease;
}

.history-item:hover {
    background-color: rgba(255, 255, 255, 0.192);
}

.history-item.selected {
    background-color: rgba(129, 255, 56, 0.1);
}

.invisible-scrollbar::-webkit-scrollbar {
    width: 100px; 
    background: transparent; 
}

/* Hide scrollbar for Firefox */
.invisible-scrollbar {
    scrollbar-width: none;
    -ms-overflow-style: none;
}
/* ... */

